--- a/src/components/Slider/Sidebar.css
+++ b/src/components/Slider/Sidebar.css
@@ -8,7 +8,7 @@
     position: relative;
     text-align: center;
     color: white;
-    background-color: aliceblue;
+    background-color: rgb(246, 255, 240);
 }
 .sidebar-text{
     position: absolute;
